[package]
name = "oauth1a"
version = "0.1.0"
authors = ["David Clevenger <dclevenger00@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Rust implementation of OAuth Core 1.0 Revision A
"""

keywords = ["oauth", "oauth1a", "http"]
categories = ["http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
